hot reloading css & tags

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Nutrack: Get your diet on track.">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet"> 
   </head>
   <body>
     <div id="app"></div>
